# diancubes

./: .gitignore  CMakeLists.txt  readme.md  任务要求.md  参考文档.md  透明交叉.md  面试报告.md  面试题目.html  项目总结报告.md
doc/: todo.md  代码的优化方案.md  基础知识学习.md  如何提问.md  如何设计一个解决方案.md  待模仿的代码.md  提交介绍.md  相关问题.md  着色器.md  资料查阅.md  透明效果.md  问题处理思路.md  项目搭建过程.md
doc/词条/: 加权平均值算法.md  深度缓冲.md  混合.md  着色器.md
include/: root_directory.h  shader_s.h
lib/: glfw3.lib
res/: 5.1.light_cube.fs
src/: main.cpp
